--- a/html/index.html
+++ b/html/index.html
@@ -1,65 +1,415 @@
 <!doctype html>
 <html lang="en" class="no-js">
 <head>
-    <meta charset="UTF-8">
-    <title>Document</title>
-    <!-- dns prefetch -->
-    <link href="http://www.google-analytics.com/" rel="dns-prefetch">
-    <!-- meta -->
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <!-- icons -->
-    <link href="favicon.ico" rel="shortcut icon">
-    <!-- css + javascript -->
-    <link rel="stylesheet" href="style.css" media="all">
-    <script type="text/javascript" src="///cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
+  <meta charset="UTF-8">
+  <title>Document</title>
+  <!-- dns prefetch -->
+  <link href="http://www.google-analytics.com/" rel="dns-prefetch">
+  <!-- meta -->
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <!-- icons -->
+  <link href="favicon.ico" rel="shortcut icon">
+  <!-- css + javascript -->
+  <link rel="stylesheet" href="css/main.css" media="all">
+  <script type="text/javascript" src="///cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
 </head>
 <body>
 <!-- wrapper -->
 <div class="wrapper clearfix">
     <!-- header -->
-    <header class="header inner clearfix" role="banner">
-        <!-- logo -->
+    <header class="header clearfix" role="banner">
+      <div class="inner">
         <div class="logo">
             <img src="img/logo.png" alt="-" title="-" class="logo-img">
         </div>
         <!-- /logo -->
-        <!-- nav -->
         <nav class="nav" role="navigation">
-            <div class="menu"></div>
+          <ul>
+            <li><a class="active" href="">О ФОРУМЕ</a></li>
+            <li><a href="">ПРОГРАММА</a></li>
+            <li><a href="">СПИКЕРЫ</a></li>
+            <li><a href="">ПАРТНЕРЫ</a></li>
+            <li><a href="">СТОИМОСТЬ И УЧАСТИЕ</a></li>
+            <li><a href="">КОНТАКТЫ</a></li>
+          </ul>
         </nav>
         <!-- /nav -->
+      </div>
     </header>
     <!-- /header -->
 
     <div class="container inner">
         <!-- section -->
         <section role="main">
-            <h1 class="ctitle">Последние записи</h1>
-            <!-- article -->
-            <article>
-                <h2 class="title">Извините, нечего показывать ;(</h2>
+
+            <article class="headliner">
+              <h6><i class="fa fa-map-marker"></i>17-19 сентября, Санкт-Петербург</h6>
+              <p>Уникальная площадка для общения организаторов и заказчиков. Креативная среда для рождения новых идей. Практика и теория организации мероприятий.</p>
+              <a href="#" class="buy-ticket">Купить билет</a>
+            </article><!-- headliner -->
+
+            <article class="software">
+              <div class="inner">
+               <p>Установите официальное приложение GLOBAL EVENT.RU FORUM</p>
+                <ul>
+                  <li class="soft-1"><a href="#"></a></li>
+                  <li class="soft-2"><a href="#"></a></li>
+                  <li class="soft-3"><a href="#"></a></li>
+                </ul>
+              </div>
             </article>
-            <!-- /article -->
-            <!-- pagination -->
-            <div class="pagination">
-                <!-- noindex --><!-- /noindex -->
-            </div>
-            <!-- /pagination -->
+            <!-- /.software -->
+
+            <article class="how-it-was">
+              <div class="how-it-was-tabs inner">
+                <h2>Как это было</h2>
+                <ul class="etabs">
+                  <li><a href="#photo">фото</a></li>
+                  <li><a href="#cifres">в цифрах</a></li>
+                </ul>
+
+                <div class="how-it-was-photo" id="photo">
+                  <img src="img/how-it-was-slider/slide-1.jpg" alt="">
+                </div><!-- how-it-was-photo -->
+
+                <div class="how-it-was-cifres" id="cifres">
+
+                    <li>100</li>
+                    <li>Актуальных тем</li>
+                    <li><span>70</span></li>
+                    <li>Спикеров</li>
+                    <li>600</li>
+                    <li>Участников из 50 городов</li>
+                    <li>Генеральных партнёров</li>
+                    <li>10</li>
+                    <li>Организационных партнёров</li>
+                    <li>50</li>
+                    <li>Аккредитованных СМИ</li>
+                    <li>50</li>
+
+                </div><!-- how-it-was-cifres -->
+              </div><!-- inner -->
+
+            </article><!-- /.how-it-was -->
+
+            <article class="video-block">
+
+            </article><!-- /.video-block -->
+
+            <article class="speakers">
+              <h2>Спикеры</h2>
+              <ul>
+                <li>
+                  <img src="" alt="">
+                  <h5>Евгения Брагина</h5>
+                  <p>генеральный директор, <a href="">учредитель Event Cube</a></p>
+                </li>
+                <li>
+                  <img src="" alt="">
+                  <h5>Данило Ланге</h5>
+                  <p>генеральный директор<a href="">Louder</a></p>
+                </li>
+                <li>
+                  <img src="" alt="">
+                  <h5>Анна Антонова</h5>
+                  <p>управлющий партнёр <a href="">Louder</a></p>
+                </li>
+                <li>
+                  <img src="" alt="">
+                  <h5>Александр Сафонов</h5>
+                  <p>руководитель event-направления в СНГ <a href="">Oriflame Cosmetics</a></p>
+                </li>
+                <li>
+                  <img src="" alt="">
+                  <h5>Людмила Терехова</h5>
+                  <p>руководитель департамента коммуникаций <a href="">M.Видео</a></p>
+                </li>
+              </ul>
+              <a href="#" class="view-all">Показать всех</a>
+            </article>
+            <!-- /.speakers -->
+
+            <article class="targets">
+              <h2>Цели форума</h2>
+              <ul>
+                <li>
+                  <h5>Вдохновение</h5>
+                  <p>Вы почерпнете множество свежих, креативных идей для будущих проектов</p>
+                </li>
+                <li>
+                  <h5>Расширение базы контактов</h5>
+                  <p>Существенно расширите сеть полезных контактов: потенциальных Клиентов, партнеров, единомышленников</p>
+                </li>
+                <li>
+                  <h5>Сотрудничество</h5>
+                  <p>Global Event.ru Forum – важный шаг к оптимизации диалога Клиент-Агентство-Подрядчик и установления партнерских отношений между всеми участниками event-рынка</p>
+                </li>
+                <li>
+                  <h5>Развитие</h5>
+                  <p>Global Event.ru Forum — образовательная площадка, призванная развить event-индустрию и вывести ее на новый уровень</p>
+                </li>
+              </ul>
+            </article><!-- /.targets -->
+
+            <article class="participants">
+              <h2>Участники: кто они?</h2>
+              <ul>
+                <li>Директора по маркетингу</li>
+                <li>Бренд-менеджеры</li>
+                <li>Директора по корпоративным коммуникациям</li>
+                <li>Специалисты по корпоративным коммуникациям</li>
+                <li>Директора рекламных и коммуникационных агентств</li>
+                <li>Индивидуальные event-специалисты</li>
+                <li>HR/PR-директора</li>
+                <li>Профессиональные участники event-рынка (дизайн и декор, кейтеринг, прокатные и технические компании)</li>
+                <li>Руководители и креативные директора event-агенств</li>
+              </ul>
+            </article><!-- participants -->
+
+            <article class="reviews">
+              <h2>Отзывы</h2>
+              <ul>
+                <li>
+                  <img src="" alt="">
+                  <h4>Иван Мищенко</h4>
+                  <h5>управляющий партнер A5000 Event Solutions</h5>
+                  <blockquote>Еще раз поздравляю с успешным проведением первого Global Event.ru Forum. Я присутствовал фактически на всех мероприятиях для event-менеджеров, но такой атмосферы не было нигде. На мой взгляд, это очень важно, и с такой атмосферой можно работать и дальше развиваться в разные стороны. Желаю проекту стать самым масштабным и значимым событием в event-индустрии!</blockquote>
+                </li>
+              </ul>
+            </article><!-- /.reviews -->
+
+            <article class="price">
+              <h2>Стоимость участия</h2>
+              <table>
+                <tr>
+                  <td></td>
+                  <td class="collgroupe-2">Хочу знать</td>
+                  <td class="collgroupe-3">Хочу знать и веселиться</td>
+                  <td class="collgroupe-4">Хочу всё знать</td>
+                  <td class="collgroupe-5 collgroupe-active">Хочу всё знать и веселиться</td>
+                  <td class="collgroupe-6">Хочу всё</td>
+                </tr>
+                <tr>
+                  <td></td>
+                  <td class="collgroupe-2">15 000 Р</td>
+                  <td class="collgroupe-3">19 500 Р</td>
+                  <td class="collgroupe-4">24 500 Р</td>
+                  <td class="collgroupe-5 collgroupe-active">29 500 Р</td>
+                  <td class="collgroupe-6">74 500 Р</td>
+                </tr>
+                <tr>
+                  <td>День 1 — теория</td>
+                  <td class="collgroupe-2 checked"></td>
+                  <td class="collgroupe-3 checked"></td>
+                  <td class="collgroupe-4 checked"></td>
+                  <td class="collgroupe-5 checked collgroupe-active"></td>
+                  <td class="collgroupe-6 checked"></td>
+                </tr>
+                <tr>
+                  <td>День 2 — практика</td>
+                  <td class="collgroupe-2 checked"></td>
+                  <td class="collgroupe-3 checked"></td>
+                  <td class="collgroupe-4 checked"></td>
+                  <td class="collgroupe-5 checked collgroupe-active"></td>
+                  <td class="collgroupe-6 checked"></td>
+                </tr>
+                <tr>
+                  <td>Вечеринка Event.ru</td>
+                  <td class="collgroupe-2"></td>
+                  <td class="collgroupe-3 checked"></td>
+                  <td class="collgroupe-4"></td>
+                  <td class="collgroupe-5 checked collgroupe-active"></td>
+                  <td class="collgroupe-6 checked"></td>
+                </tr>
+                <tr>
+                  <td>День 3 — мастер-классы / лекции / семинары</td>
+                  <td class="collgroupe-2"></td>
+                  <td class="collgroupe-3"></td>
+                  <td class="collgroupe-4 checked"></td>
+                  <td class="collgroupe-5 checked collgroupe-active"></td>
+                  <td class="collgroupe-6 checked"></td>
+                </tr>
+                <tr>
+                  <td>Места в первых рядах</td>
+                  <td class="collgroupe-2"></td>
+                  <td class="collgroupe-3"></td>
+                  <td class="collgroupe-4"></td>
+                  <td class="collgroupe-5 checked collgroupe-active"></td>
+                  <td class="collgroupe-6 checked"></td>
+                </tr>
+                <tr>
+                  <td>Участие в закрытом ужине со спикерами</td>
+                  <td class="collgroupe-2"></td>
+                  <td class="collgroupe-3"></td>
+                  <td class="collgroupe-4"></td>
+                  <td class="collgroupe-5 collgroupe-active"></td>
+                  <td class="collgroupe-6 checked"></td>
+                </tr>
+                <tr>
+                  <td>Личный ассистент на время Форума</td>
+                  <td class="collgroupe-2"></td>
+                  <td class="collgroupe-3"></td>
+                  <td class="collgroupe-4"></td>
+                  <td class="collgroupe-5 collgroupe-active"></td>
+                  <td class="collgroupe-6 checked"></td>
+                </tr>
+                <tr>
+                  <td class="collgroupe-1">Все материалы Форума</td>
+                  <td class="collgroupe-2"></td>
+                  <td class="collgroupe-3"></td>
+                  <td class="collgroupe-4"></td>
+                  <td class="collgroupe-5 collgroupe-active"></td>
+                  <td class="collgroupe-6 checked"></td>
+                </tr>
+              </table>
+              <a href="#" class="buy-ticket">Купить билет</a>
+            </article><!-- price -->
+
+            <article class="programm">
+                <h2>Программа</h2>
+            </article><!-- /.programm -->
+
+            <article class="organizators">
+              <h2>Организаторы</h2>
+              <table>
+                <tr>
+                  <td>
+                    <img src="" alt="">
+                  </td>
+                  <td>
+                    <h4>Журнал Event.ru</h4>
+                    <p>печатное профессиональное издание для специалистов в области event-маркетинга, существует с 2006 года, тираж 5000, 120 полос, переодичность: 6 номеров в год</p>
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <h4>Портал Event.ru</h4>
+                    <p>информационный портал для event-специалистов, перезапущен в начале 2013 года</p>
+                  </td>
+                  <td>
+                    <img src="" alt="">
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <img src="" alt="">
+                  </td>
+                  <td>
+                    <h4>Информационный портал EventCatalog.ru</h4>
+                    <p>профессиональный каталог event-компаний, открыт в 2005 году</p>
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <h4>Событие года</h4>
+                    <p>главная Event премия России</p>
+                  </td>
+                  <td>
+                    <img src="" alt="">
+                  </td>
+                </tr>
+              </table>
+            </article><!-- /.organizators -->
+
+            <article class="partners">
+              <h2>Партнёры</h2>
+              <h5>Спонсоры</h5>
+              <ul class="partner-sponsors">
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li>Стать спонсором</li>
+              </ul>
+              <h5>Генеральные партнёры</h5>
+              <ul class="partner-general">
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+              </ul>
+              <h5>Информационные партнёры</h5>
+              <ul class="partner-inform">
+                <li></li>
+                <li></li>
+              </ul>
+              <h5>Организационные партнёры</h5>
+                <ul>
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                </ul>
+            </article><!-- /.partners -->
+
+            <article class="where-buy">
+              <h4>Global Event Forum</h4>
+              <p>успейте купить билет на главное событие event-индустрии</p>
+              <a href="#" class="buy-ticket">Купить билет</a>
+            </article><!-- /.where-buy -->
+
+            <article class="maps">
+
+            </article><!-- /.maps -->
+
+            <article class="contacts">
+              <ul>
+                <li>
+                  <h4>Программа форума и партнерство:</h4>
+                  <h5>Руководитель форума</h5>
+                  <p>Надежда Макова<br><a href="mailto:editor@event.ru">editor@event.ru</a></p>
+                </li>
+                <li>
+                  <h4>Спонсорство и спецпроекты:</h4>
+                  <h5>Директор по рекламе</h5>
+                  <p>Елена Новикова<br><a href="tel:+79260017868">+7 (926) 001-78-68</a><br><a href="mailto:reklama@event.ru">reklama@event.ru</a></p>
+                </li>
+                <li>
+                  <h4>Общие вопросы:</h4>
+                  <h5>Администратор проекта</h5>
+                  <p>Елена Гиндина<br><a href="mailto:forum@event.ru">forum@event.ru</a></p>
+                </li>
+              </ul>
+            </article><!-- /.contacts -->
+
         </section>
         <!-- /section -->
-
-        <!-- sidebar -->
-        <aside class="sidebar" role="complementary">
-            <div id="categories-2" class="widget widget_categories">
-                <h6>Рубрики</h6>
-                <ul>
-                    <li class="cat-item-none">Рубрик нет</li>
-                </ul>
-            </div>
-        </aside>
-        <!-- /sidebar -->
-
     </div>
     <!-- /.container -->
 </div>
@@ -68,22 +418,28 @@
 <!-- footer -->
 <footer class="footer" role="contentinfo">
     <div class="mainfooter">
-
-        <!-- copyright -->
-        <p class="copyright">
-            © 2015 Собственность. Работает на html2wp easy.
-        </p>
-        <!-- /copyright -->
+      <a href="#" class="iwannabearepartner">Стать партнёром</a>
+      <a href="#" class="dload">Скачать презентацию</a>
+      <p>РАЗРАБОТКА И ПОДДЕРЖКА — BROCCOLI</p>
     </div>
     <!-- /.mainfooter -->
 </footer>
 <!-- /footer -->
-
-<div class="backhead bkblock0n">
-</div><!-- backhead bkblock0n -->
-
     <script type="text/javascript" src="js/jquery.js"></script>
+    <script>jQuery.browser = {};
+(function () {
+    jQuery.browser.msie = false;
+    jQuery.browser.version = 0;
+    if (navigator.userAgent.match(/MSIE ([0-9]+)\./)) {
+        jQuery.browser.msie = true;
+        jQuery.browser.version = RegExp.$1;
+    }
+})();</script>
+    <script type="text/javascript" src="js/jquery.hashchange.min.js"></script>
+    <script type="text/javascript" src="js/jquery.easytabs.min.js"></script>
+    <script>
+      $('.how-it-was-tabs').easytabs();
+    </script>
     <script type="text/javascript" src="js/scripts.js"></script>
-
 </body>
 </html>
