--- a/html/index.html
+++ b/html/index.html
@@ -74,7 +74,7 @@
                 </div><!-- how-it-was-photo -->
 
                 <div class="how-it-was-cifres" id="cifres">
-
+                  <ul>
                     <li>100</li>
                     <li>Актуальных тем</li>
                     <li><span>70</span></li>
@@ -87,46 +87,48 @@
                     <li>50</li>
                     <li>Аккредитованных СМИ</li>
                     <li>50</li>
-
+                  </ul>
                 </div><!-- how-it-was-cifres -->
               </div><!-- inner -->
 
             </article><!-- /.how-it-was -->
 
             <article class="video-block">
-
+                <a href="#" class="yt-video"><img src="img/yt-video.jpg" alt=""></a>
             </article><!-- /.video-block -->
 
             <article class="speakers">
-              <h2>Спикеры</h2>
-              <ul>
-                <li>
-                  <img src="" alt="">
-                  <h5>Евгения Брагина</h5>
-                  <p>генеральный директор, <a href="">учредитель Event Cube</a></p>
-                </li>
-                <li>
-                  <img src="" alt="">
-                  <h5>Данило Ланге</h5>
-                  <p>генеральный директор<a href="">Louder</a></p>
-                </li>
-                <li>
-                  <img src="" alt="">
-                  <h5>Анна Антонова</h5>
-                  <p>управлющий партнёр <a href="">Louder</a></p>
-                </li>
-                <li>
-                  <img src="" alt="">
-                  <h5>Александр Сафонов</h5>
-                  <p>руководитель event-направления в СНГ <a href="">Oriflame Cosmetics</a></p>
-                </li>
-                <li>
-                  <img src="" alt="">
-                  <h5>Людмила Терехова</h5>
-                  <p>руководитель департамента коммуникаций <a href="">M.Видео</a></p>
-                </li>
-              </ul>
-              <a href="#" class="view-all">Показать всех</a>
+              <div class="inner">
+                <h2>Спикеры</h2>
+                <ul>
+                  <li>
+                    <img src="" alt="">
+                    <h5>Евгения Брагина</h5>
+                    <p>генеральный директор, <a href="">учредитель Event Cube</a></p>
+                  </li>
+                  <li>
+                    <img src="" alt="">
+                    <h5>Данило Ланге</h5>
+                    <p>генеральный директор<a href="">Louder</a></p>
+                  </li>
+                  <li>
+                    <img src="" alt="">
+                    <h5>Анна Антонова</h5>
+                    <p>управлющий партнёр <a href="">Louder</a></p>
+                  </li>
+                  <li>
+                    <img src="" alt="">
+                    <h5>Александр Сафонов</h5>
+                    <p>руководитель event-направления в СНГ <a href="">Oriflame Cosmetics</a></p>
+                  </li>
+                  <li>
+                    <img src="" alt="">
+                    <h5>Людмила Терехова</h5>
+                    <p>руководитель департамента коммуникаций <a href="">M.Видео</a></p>
+                  </li>
+                </ul>
+                <a href="#" class="view-all">Показать всех</a>
+              </div>
             </article>
             <!-- /.speakers -->
 
