--- a/html/index.html
+++ b/html/index.html
@@ -217,15 +217,29 @@
             </article><!-- participants -->
 
             <article class="reviews">
-              <h2>Отзывы</h2>
-              <ul>
-                <li>
-                  <img src="" alt="">
-                  <h4>Иван Мищенко</h4>
-                  <h5>управляющий партнер A5000 Event Solutions</h5>
-                  <blockquote>Еще раз поздравляю с успешным проведением первого Global Event.ru Forum. Я присутствовал фактически на всех мероприятиях для event-менеджеров, но такой атмосферы не было нигде. На мой взгляд, это очень важно, и с такой атмосферой можно работать и дальше развиваться в разные стороны. Желаю проекту стать самым масштабным и значимым событием в event-индустрии!</blockquote>
-                </li>
-              </ul>
+              <div class="inner">
+                <h2>Отзывы</h2>
+                <ul class="reviews-slider">
+                  <li>
+                    <img src="img/reviews/reviews1.jpg" alt="">
+                    <h4>Иван Мищенко</h4>
+                    <h5>управляющий партнер <a href="#">A5000 Event Solutions</a></h5>
+                    <blockquote>Еще раз поздравляю с успешным проведением первого Global Event.ru Forum. Я присутствовал фактически на всех мероприятиях для event-менеджеров, но такой атмосферы не было нигде. На мой взгляд, это очень важно, и с такой атмосферой можно работать и дальше развиваться в разные стороны. Желаю проекту стать самым масштабным и значимым событием в event-индустрии!</blockquote>
+                  </li>
+                  <li>
+                    <img src="img/reviews/reviews1.jpg" alt="">
+                    <h4>Иван Мищенко</h4>
+                    <h5>управляющий партнер <a href="#">A5000 Event Solutions</a></h5>
+                    <blockquote>Еще раз поздравляю с успешным проведением первого Global Event.ru Forum. Я присутствовал фактически на всех мероприятиях для event-менеджеров, но такой атмосферы не было нигде. На мой взгляд, это очень важно, и с такой атмосферой можно работать и дальше развиваться в разные стороны. Желаю проекту стать самым масштабным и значимым событием в event-индустрии!</blockquote>
+                  </li>
+                  <li>
+                    <img src="img/reviews/reviews1.jpg" alt="">
+                    <h4>Иван Мищенко</h4>
+                    <h5>управляющий партнер <a href="#">A5000 Event Solutions</a></h5>
+                    <blockquote>Еще раз поздравляю с успешным проведением первого Global Event.ru Forum. Я присутствовал фактически на всех мероприятиях для event-менеджеров, но такой атмосферы не было нигде. На мой взгляд, это очень важно, и с такой атмосферой можно работать и дальше развиваться в разные стороны. Желаю проекту стать самым масштабным и значимым событием в event-индустрии!</blockquote>
+                  </li>
+                </ul>
+              </div>
             </article><!-- /.reviews -->
 
             <article class="price">
@@ -316,7 +330,61 @@
             </article><!-- price -->
 
             <article class="programm">
+              <div class="inner programm-tabs">
                 <h2>Программа</h2>
+                <ul class="etabs">
+                  <li><a href="#day-1"><span>День первый</span>Event. Опыт</a></li>
+                  <li><a href="#day-2"><span>День второй</span>Event. Идеи</a></li>
+                  <li><a href="#day-3"><span>День третий</span>Event. Детали</a></li>
+                </ul>
+
+                <div class="programm-tabs-day-1" id="day-1">
+Тендеры. Правила проведения и секреты успеха
+   Мировая экспертиза vs российская действительность
+   Интервью с руководителями отдела закупок
+   крупнейших компаний — заказчиков: event в закупке,
+   креатив vs смета
+   Презентация нового инновационного инструмента для
+   подготовки брифа
+
+   Городской event – программа 2015/2016
+   Экспертная сессия с представителями городских
+   администраций и Департамента Культуры г. Москвы и РФ
+
+
+   Cоциальный event – новый тренд бизнеса
+   Панельная дискуссия с организатора крупнейших
+   КСО-кампаний
+
+   Эффективный event: миф или реальность?!
+   Слово клиенту
+   Роль event’а в развитии бизнеса
+   Как выбрать правильного партнера
+   Как отстоять бюджет
+   Слово агентству
+   Основные правила общения с Клиентом
+   Равноправное партнерство – залог качественной работы
+   и успешного результата – стратегия, в которой нет
+   проигравших
+                </div><!-- programm-tabs-day-1 -->
+
+                <div class="programm-tabs-day-2" id="day-2">
+                <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo voluptatibus reiciendis consectetur perferendis dicta eaque fugiat reprehenderit. Qui quisquam, facilis tempora dolorum ratione, nam fugiat modi pariatur minus eligendi possimus.</div>
+                <div>Nihil voluptatum enim vero cupiditate, natus, ipsum eius beatae nostrum ducimus dolor, magni, amet aliquam molestiae est nulla! Commodi delectus ducimus nam aperiam tempora voluptate, voluptatem esse sunt hic natus!</div>
+                <div>Natus aliquam sed debitis expedita! Laborum mollitia ratione ad assumenda veritatis ea, sint, incidunt, perspiciatis earum, vitae rem molestias omnis magnam unde. Numquam est vel earum voluptate repudiandae, ipsa ut!</div>
+                <div>Dicta fugit architecto quaerat, vitae asperiores aperiam, saepe sed alias veniam similique repellendus dolor voluptate facere illum temporibus labore numquam unde adipisci magni amet sint ipsam eveniet. Sint rem, ipsam.</div>
+                <div>Animi officiis harum nobis recusandae, est odit doloremque rerum ipsa, provident, suscipit soluta sit et qui. Tempore sint ad totam temporibus error eum, iste ratione dolorum ea non minus libero?</div>
+                <div>Omnis sed reiciendis dicta quae cum consequatur aspernatur facere tempore excepturi alias. Doloremque, explicabo deserunt eligendi, perspiciatis facilis laudantium laboriosam fugiat aspernatur, natus quos quis magnam. Nisi similique cumque, explicabo.</div>
+                <div>Repellat, voluptates, earum! Perferendis consequuntur debitis ratione, libero numquam maiores rem, et, facere tempora obcaecati placeat sint voluptas. Ea ratione aliquid doloribus, porro laborum dignissimos delectus odit eius ullam possimus.</div>
+                </div><!-- programm-tabs-day-2 -->
+
+                <div class="programm-tabs-day-3" id="day-3">
+                <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam rerum architecto, animi odit numquam ex obcaecati ipsam similique, dolorum expedita perferendis voluptatum dolores debitis blanditiis dolore incidunt suscipit harum totam?</div>
+                <div>Debitis perferendis unde quo dolorum illo, velit consectetur, sed minima fugiat ipsa repudiandae iusto a voluptatem neque nisi ab quidem numquam. Officiis iste amet aliquam, asperiores nisi architecto nam. Architecto.</div>
+                <div>Repudiandae obcaecati optio quam odit rem id, deleniti alias mollitia, molestiae assumenda tenetur quasi, modi magni sequi? Dignissimos enim consequuntur hic nesciunt, labore laudantium distinctio magni necessitatibus dolores iure reprehenderit!</div>
+                </div><!-- programm-tabs-day-3 -->
+
+              </div><!-- programm-tabs -->
             </article><!-- /.programm -->
 
             <article class="organizators">
@@ -490,6 +558,7 @@
     <script type="text/javascript" src="js/jquery.easytabs.min.js"></script>
     <script>
       $('.how-it-was-tabs').easytabs();
+      $('.programm-tabs').easytabs();
     </script>
     <script src="js/jquery.bxslider.min.js"></script>
     <script>
@@ -497,6 +566,13 @@
           slideWidth: 200,
           minSlides: 5,
           maxSlides: 5,
+          slideMargin: 0,
+          pagerType: 'short',
+      });
+      $('.reviews-slider').bxSlider({
+          slideWidth: 1000,
+          minSlides: 1,
+          maxSlides: 1,
           slideMargin: 0,
           pagerType: 'short',
       });
