--- a/html/index.html
+++ b/html/index.html
@@ -895,10 +895,9 @@
 <!-- /footer -->
     <script type="text/javascript" src="js/jquery.js"></script>
     <script src="js/jquery.bxslider.min.js"></script>
-    <script>
+    <script src="js/jquery.simplemodal.js"></script>
+    <script src="js/jquery.simplemodal.contact.js"></script>
 
-
-    </script>
     <script>
       jQuery.browser = {};
       (function () {
@@ -916,6 +915,10 @@
       $('.how-it-was-tabs').easytabs();
       $('.programm-tabs').easytabs();
     </script>
+
+<script></script>
+
+
 <!-- load on 341+ -->
 <script type="text/javascript" src="js/jquery.qtip.min.js"></script>
 <script type="text/javascript" src="js/jquery.easing.min.js"></script>
